<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>not.hub</groupId>
  <artifactId>SafeTPA</artifactId>
  <version>3.3.0</version>
  <packaging>jar</packaging>

  <name>${project.artifactId}</name>
  <description>Minecraft self-service teleport requests</description>
  <url>https://github.com/nothub/SafeTPA</url>

  <licenses>
    <license>
      <name>MIT License</name>
      <url>https://www.opensource.org/licenses/mit-license.php</url>
    </license>
  </licenses>

  <scm>
    <connection>scm:git:git://github.com/nothub/SafeTPA.git</connection>
    <developerConnection>scm:git:ssh://github.com/nothub/SafeTPA.git</developerConnection>
    <url>https://github.com/nothub/SafeTPA</url>
  </scm>

  <properties>
    <java.version>17</java.version>
    <maven.compiler.source>${java.version}</maven.compiler.source>
    <maven.compiler.target>${java.version}</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <minecraft.version>1.20.1</minecraft.version>
  </properties>

  <repositories>
    <repository>
      <id>papermc</id>
      <url>https://papermc.io/repo/repository/maven-public/</url>
    </repository>
  </repositories>

  <dependencies>
    <dependency>
      <groupId>io.papermc.paper</groupId>
      <artifactId>paper-api</artifactId>
      <version>${minecraft.version}-R0.1-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>io.papermc</groupId>
      <artifactId>paperlib</artifactId>
      <version>1.0.8</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>org.bstats</groupId>
      <artifactId>bstats-bukkit</artifactId>
      <version>3.0.2</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>com.github.spotbugs</groupId>
      <artifactId>spotbugs-annotations</artifactId>
      <version>4.7.1</version>
      <scope>provided</scope>
    </dependency>
  </dependencies>

  <pluginRepositories>
    <pluginRepository>
      <id>apache-snapshots</id>
      <url>https://repository.apache.org/content/repositories/snapshots/</url>
    </pluginRepository>
  </pluginRepositories>

  <build>
    <defaultGoal>clean package</defaultGoal>
    <plugins>
      <plugin>
        <!-- require maven 3+, java 17+, check for common dependency problems -->
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
        <version>3.3.0</version>
        <executions>
          <execution>
            <id>enforce-rules</id>
            <goals>
              <goal>enforce</goal>
            </goals>
            <configuration>
              <rules>
                <!-- https://maven.apache.org/enforcer/enforcer-rules/index.html -->
                <requireMavenVersion>
                  <version>[3,)</version>
                </requireMavenVersion>
                <requireJavaVersion>
                  <version>[17,)</version>
                </requireJavaVersion>
                <banDuplicatePomDependencyVersions/>
                <requireUpperBoundDeps/>
                <!-- <dependencyConvergence/> 😩 -->
              </rules>
              <fail>true</fail>
              <failFast>true</failFast>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <!-- static analysis via spotbugs -->
        <groupId>com.github.spotbugs</groupId>
        <artifactId>spotbugs-maven-plugin</artifactId>
        <version>4.7.1.0</version>
        <configuration>
          <plugins>
            <plugin>
              <groupId>com.h3xstream.findsecbugs</groupId>
              <artifactId>findsecbugs-plugin</artifactId>
              <version>1.12.0</version>
            </plugin>
          </plugins>
        </configuration>
        <executions>
          <execution>
            <id>spotbugs</id>
            <phase>verify</phase>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.11.0</version>
        <configuration>
          <source>${java.version}</source>
          <target>${java.version}</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.5.0</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <createDependencyReducedPom>false</createDependencyReducedPom>
          <filters>
            <filter>
              <artifact>*</artifact>
              <excludes>
                <exclude>META-INF/**</exclude>
              </excludes>
            </filter>
          </filters>
          <relocations>
            <relocation>
              <pattern>io.papermc.lib</pattern>
              <shadedPattern>not.hub.safetpa.paperlib</shadedPattern>
            </relocation>
            <relocation>
              <pattern>org.bstats</pattern>
              <shadedPattern>not.hub.safetpa.bstats</shadedPattern>
            </relocation>
          </relocations>
        </configuration>
      </plugin>
    </plugins>
    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <filtering>true</filtering>
      </resource>
      <resource>
        <directory>.</directory>
        <filtering>true</filtering>
        <includes>
          <include>LICENSE</include>
        </includes>
      </resource>
    </resources>
  </build>

  <profiles>
    <profile>
      <id>run-test-server</id>
      <properties>
        <build.profile.id>run-test-server</build.profile.id>
        <skip.integration.tests>false</skip.integration.tests>
        <skip.unit.tests>false</skip.unit.tests>
      </properties>
      <build>
        <defaultGoal>verify</defaultGoal>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-clean-plugin</artifactId>
            <version>3.3.1</version>
            <configuration>
              <filesets>
                <fileset>
                  <directory>server</directory>
                  <followSymlinks>false</followSymlinks>
                </fileset>
              </filesets>
            </configuration>
          </plugin>
          <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>exec-maven-plugin</artifactId>
            <version>3.1.0</version>
            <executions>
              <execution>
                <id>mc-server-setup</id>
                <phase>pre-integration-test</phase>
                <goals>
                  <goal>exec</goal>
                </goals>
                <configuration>
                  <executable>convenience/server-setup.py</executable>
                  <arguments>
                    <argument>--fork</argument>
                    <argument>paper</argument>
                    <argument>--mc-version</argument>
                    <argument>${minecraft.version}</argument>
                    <argument>--server-dir</argument>
                    <argument>server</argument>
                    <argument>--link-name</argument>
                    <argument>server.jar</argument>
                    <argument>--copy-plugins</argument>
                    <argument>target/${project.artifactId}-*.jar</argument>
                  </arguments>
                  <environmentVariables>
                    <!-- Set MC_EULA to agree with Mojangs EULA: https://account.mojang.com/documents/minecraft_eula
                    <MC_EULA>true</MC_EULA> -->
                  </environmentVariables>
                </configuration>
              </execution>
              <execution>
                <id>mc-server-run</id>
                <phase>integration-test</phase>
                <goals>
                  <goal>exec</goal>
                </goals>
                <configuration>
                  <workingDirectory>server</workingDirectory>
                  <executable>java</executable>
                  <arguments>
                    <argument>-Xms2G</argument>
                    <argument>-Xmx2G</argument>
                    <argument>-XX:+UseG1GC</argument>
                    <argument>-XX:+ParallelRefProcEnabled</argument>
                    <argument>-XX:MaxGCPauseMillis=200</argument>
                    <argument>-XX:+UnlockExperimentalVMOptions</argument>
                    <argument>-XX:+DisableExplicitGC</argument>
                    <argument>-XX:+AlwaysPreTouch</argument>
                    <argument>-XX:G1HeapWastePercent=5</argument>
                    <argument>-XX:G1MixedGCCountTarget=4</argument>
                    <argument>-XX:G1MixedGCLiveThresholdPercent=90</argument>
                    <argument>-XX:G1RSetUpdatingPauseTimePercent=5</argument>
                    <argument>-XX:SurvivorRatio=32</argument>
                    <argument>-XX:+PerfDisableSharedMem</argument>
                    <argument>-XX:MaxTenuringThreshold=1</argument>
                    <argument>-XX:G1NewSizePercent=30</argument>
                    <argument>-XX:G1MaxNewSizePercent=40</argument>
                    <argument>-XX:G1HeapRegionSize=8M</argument>
                    <argument>-XX:G1ReservePercent=20</argument>
                    <argument>-XX:InitiatingHeapOccupancyPercent=15</argument>
                    <argument>-Dusing.aikars.flags=https://mcflags.emc.gs</argument>
                    <argument>-Daikars.new.flags=true</argument>
                    <argument>-jar</argument>
                    <argument>server.jar</argument>
                    <argument>nogui</argument>
                  </arguments>
                </configuration>
              </execution>
            </executions>
            <configuration>
              <environmentVariables>
                <LANG>en_US</LANG>
              </environmentVariables>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

</project>
